--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
    "name": "dash-be-develop",
    "version": "0.0.1",
    "description": "Backend para dashboards relacionados as votacoes",
-   "type": "commonjs",
+   "type": "module",
    "devDependencies": {
       "@types/node": "^16.11.10",
       "ts-node": "10.9.1",
@@ -16,8 +16,7 @@
       "typeorm": "0.3.21"
    },
    "scripts": {
-      "build": "tsc",
-      "start": "ts-node src/index.ts",
+      "start": "npx nodemon index.js",
       "typeorm": "typeorm-ts-node-commonjs"
    }
 }
