--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,29 @@ services: #inicia a definição dos serviços que serão executados dentro dos c
       - "${PORT:-5000}:5000" #se a variavel de ambiente PORT estiver definida, ela será usada como a porta do host. Caso contrario, usara o valor padrão 5000.
     environment:
       - PORT=5000 #define a variavel de ambiente PORT com o valor 5000
+      - DB_HOST=${DB_HOST}  #referencia variaveis de ambiente do sistema
+      - DB_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
     volumes:
       - .:/app #monta o diretório atual no conteiner em /app
       - /app/node_modules #evita que o node_modules do host sobrescreva o do conteiner
+    depends_on:
+      - db # Define que o serviço backend depende do serviço db
     restart: unless-stopped
+
+  db:
+    image: postgres:17.4-alpine3.21
+    environment:
+      - POSTGRES_USER=${DB_USER} # referencia variaveis de ambiente do sistema
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
+    ports:
+      - "5432:5432" # Expondo a porta do PostgreSQL
+    volumes:
+      - pgdata:/var/lib/postgresql/data 
+    restart: unless-stopped 
+
+volumes:
+  pgdata: # Define um volume chamado pgdata que será usado para persistir os dados do banco de dados PostgreSQL
