--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services: #inicia a definição dos serviços que serão executados dentro dos c
       - PORT=5000 #define a variavel de ambiente PORT com o valor 5000
       - DB_HOST=${DB_HOST}  #referencia variaveis de ambiente do sistema
       - DB_PORT=${DB_PORT}
-      - DB_USER=${DB_USER}
+      - DB_USER=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_NAME=${DB_NAME}
     volumes:
@@ -20,7 +20,7 @@ services: #inicia a definição dos serviços que serão executados dentro dos c
   db:
     image: postgres:17.4-alpine3.21
     environment:
-      - POSTGRES_USER=${DB_USER} # referencia variaveis de ambiente do sistema
+      - POSTGRES_USER=${DB_USERNAME} # referencia variaveis de ambiente do sistema
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
     ports:
