--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
    "scripts": {
       "start": "npx nodemon index.js",
       "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "devDependencies": {
+      "@eslint/js": "^9.24.0",
+      "@eslint/json": "^0.11.0",
+      "@eslint/markdown": "^6.3.0",
+      "eslint": "^9.24.0",
+      "globals": "^16.0.0"
    }
 }
